<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- General -->
    <string name="app_name_big">OpenStreetHeight</string>
    <string name="app_name_small">OSH</string>
    <string name="nav_continue">Continue</string>
    <string name="nav_finish">Finish</string>
    <string name="nav_skip">Skip</string>
    <string name="nav_undo">Undo</string>
    <string name="nav_save">Save</string>
    <string name="nav_done">Done</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    
    <!-- Main Activity Internet Access Dialog -->
    <string name="main_internet_tip">Please check your Internet connection</string>
    
    <!-- Main Activity Camera Params Dialog -->
    <string name="main_dialog_camera_approve">Approve</string>
    <string name="main_dialog_camera_exit">Exit</string>

    <!-- Section Params Autosearch -->
    <string name="autosearch_wait_info">Fetching camera params…</string>
    <string name="autosearch_retry_info">Please, connect to the Internet.
        \n\nWe are trying to fetch camera parameters from\ndevicespecifications.com\n\n
        Once connected, we will try to fetch parameters again.</string>


    <!-- Section Params Manual -->
    <string name="main_dialog_camera_focal_length_title">Focal length, mm</string>
    <string name="main_dialog_camera_pixel_size_title">Pixel size, μm</string>
    <string name="cam_info">You can check camera params in Internet.\n\n
    We tried auto-fill parameters using devicespecifications.com</string>
    <string name="cam_title">Cam params</string>
    <string name="cam_params_error">Should be valid double</string>

    <!-- Section OSM auth -->
    <string name="osmauth_info">Authorization required to:\n- Submit calculated height to OSM</string>

    <string name="osmauth_authorized">Authorized!</string>
    <string name="osmauth_title">OSM auth</string>
    <string name="osmauth_status_authorized">Current status: AUTHORIZED\nUsername: %s</string>
    <string name="osmauth_status_not_authorized">Current status: NOT AUTHORIZED</string>
    <string name="osmauth_snack_grant_all_permissions">Check ALL required permissions!</string>

    <!-- Section Options -->
    <string name="options_how_it_works">How it works</string>
    <string name="options_licenses">Licenses</string>
    <string name="options_about">About</string>

    <string name="options_cam_params">Camera params</string>
    <string name="options_osm_auth">OSM auth</string>

    <string name="options_measure">Measure height</string>

    <!-- Section Intro Map -->
    <string name="intro_pick_building">Pick building</string>

    <!-- Section Map -->
    <string name="map_1_long_tap_title">1. Do long tap</string>
    <string name="map_on_your_building_subtitle">On your building</string>

    <string name="map_toggle_follow_bearing">Toggle Follow bearing</string>

    <string name="map_2_tap_title">2. Do tap</string>
    <string name="map_3_tap_title">3. Do tap</string>
    <string name="map_4_tap_title">4. Do tap</string>
    <string name="map_on_the_closest_corner_subtitle">On the closest corner</string>
    <string name="map_on_the_left_corner_subtitle">On the left corner</string>
    <string name="map_on_the_right_corner_subtitle">On the right corner</string>

    <string name="map_marker_type_middle">M</string>
    <string name="map_marker_type_left">L</string>
    <string name="map_marker_type_right">R</string>

    <string name="map_error_no_building_found">No building found</string>
    <string name="map_snack_disable_follow_bearing">To stop bearing following\npress on purple triangle in menu</string>
    <string name="map_snack_cur_building_tip">%s</string>

    <string name="map_snack_compass_accuracy_medium">Compass accuracy: MEDIUM\n- Recalibrate doing 8-loop with phone\n- Get away from metal objects</string>
    <string name="map_snack_compass_accuracy_low">Compass accuracy: LOW\n- Recalibrate doing 8-loop with phone\n- Get away from metal objects</string>
    <string name="map_snack_compass_accuracy_unreliable">Compass accuracy: UNRELIABLE\n- Recalibrate doing 8-loop with phone\n- Get away from metal objects</string>
    <string name ="map_snack_building_search">Searching your building…</string>

    <!-- Section Photo -->
    <string name="photo_make_shot">Make shot</string>
    <string name="photo_pick_six_corner_points">Pick 6 corner points</string>

    <!-- Section Corners -->
    <string name="corners_left_top_short">LT</string>
    <string name="corners_middle_top_short">MT</string>
    <string name="corners_right_top_short">RT</string>
    <string name="corners_left_bottom_short">LB</string>
    <string name="corners_right_bottom_short">RB</string>
    <string name="corners_middle_bottom_short">MB</string>


    <!-- Section Finish -->
    <string name="finish_height_is">Height is:</string>
    <string name="finish_meter_short_placeholder">%.2f m</string>

    <string name="finish_put_height_in_osm">Put height in OpenStreetMap</string>
    <string name="finish_share_height_with_friends">Share height with friends</string>
    <string name="finish_repeat">Repeat</string>
    <string name="finish_height_sent_to_osm">Height sent to OSM!</string>

    <string name="finish_overwrite_height_title">Warning</string>
    <string name="finish_overwrite_height_body_placeholder">Building: %s\n\nExisting height: %.2f\nNew height: %.2f\n\nOverwrite?\n</string>

    <string name="finish_osm_auth_tip">Sign in if you want to share height in OSM</string>

</resources>
